Reworked track storing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
 	"name": "voiceacting",
-	"description": "Wow what are all these sounds?",
+	"description": "Wow, what are all these sounds?",
 	"main": "mod.js"
 }
