Added automatic beep removal when audio is playing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "voiceacting",
-	"description": "Wow, what are all these sounds?",
-	"main": "mod.js"
+	"description": "Wow what are all these sounds?",
+	"main": "mod.js",
+	"table" : "definitions.db"
 }
